--- a/web/templates/blog_page.html.j2
+++ b/web/templates/blog_page.html.j2
@@ -5,6 +5,7 @@
     <div class='post'>
         <p>{{ post['created'] }}</p>
         <p>{{post['author']}}</p>
+        <p>{{post['category']}}</p>
         <h2>{{ post['title'] }}</h2>
         <p>{{ post['content'] }}</p>
     </div>
