--- a/web/templates/blog_page.html.j2
+++ b/web/templates/blog_page.html.j2
@@ -7,6 +7,10 @@
         <p>{{post['author']}}</p>
         <p>{{post['category']}}</p>
         <h2>{{ post['title'] }}</h2>
-        <p>{{ post['content'] }}</p>
+        <div class="blog_post">
+            <img src="{{post['img_path']}}" height="250" alt=" "/>
+            <p>{{ post['content'] }}</p>
+        </div>
+        
     </div>
 {% endblock %}
